--- a/content/build.gradle
+++ b/content/build.gradle
@@ -1,7 +1,7 @@
 configure(subprojects) {
 	apply plugin: 'java-library'
-	apply plugin:  "idea"
-	apply plugin:  'maven-publish'
+	apply plugin: 'idea'
+	apply plugin: 'maven-publish'
 }
 
 
