--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id "idea"
 	id "fabric-loom" version "1.1.8" apply true
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
+	id 'maven-publish'
+	id "io.github.p03w.machete" version "1.2.0"
 }
 
 configure(subprojects) {
@@ -117,7 +119,3 @@ allprojects {
 		}
 	}
 }
-
-
-
-
