--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod Properties
 modid=forgero
-mc_target=1.19.2
+minecraft_version=1.19.2
 forgero_version=0.10.8
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
