--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -3,7 +3,6 @@ plugins {
 	id "fabric-loom" version "1.1.8" apply true
 	id 'com.matthewprenger.cursegradle' version '1.4.0'
 	id 'maven-publish'
-	id "io.github.p03w.machete" version "1.2.0"
 }
 
 configure(subprojects) {
@@ -13,7 +12,7 @@ configure(subprojects) {
 	apply plugin: 'fabric-loom'
 }
 
-archivesBaseName = "forgero-fabric-complete"
+archivesBaseName = "forgero-fabric"
 
 dependencies {
 	minecraft "com.mojang:minecraft:$project.minecraft_version"
