--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,9 +1,8 @@
-minecraft_version=1.19.2
-yarn_mappings=1.19.2+build.28
-loader_version=0.14.12
-# Dependencies
-fabric_version=0.76.0+1.19.2
-
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.5
+loader_version=0.14.17
+#Fabric api
+fabric_version=0.76.0+1.19.3
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2560M
 org.gradle.parallel=true
