--- a/.gitignore
+++ b/.gitignore
@@ -109,9 +109,9 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-*/logs/
-*/run/
-*/build/
-*/dest/
+logs/
+run/
+build/
+dest/
 .gradle/
-*/output/
+output/
