--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modImplementation "vazkii.patchouli:Patchouli:1.19.3-78-FABRIC"
+	// Patchouli compat, disabled until it's updated to 1.19.4
+//	modImplementation "vazkii.patchouli:Patchouli:${project.patchouli_version}"
 
 	modImplementation("net.devtech:arrp:0.6.7")
 
@@ -44,8 +45,8 @@ dependencies {
 	modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
 	//better combat
-	modImplementation "maven.modrinth:better-combat:1.6.1+1.19.3-fabric"
-	modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
+	modImplementation "maven.modrinth:better-combat:${project.better_combat_version}"
+	modImplementation "maven.modrinth:cloth-config:${project.cloth_config_version}"
 	modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
 	//betterend&betternether
