--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,9 +1,15 @@
-# compat
+# Fabric compat
+
+# Cloth Config
+# https://github.com/shedaniel/cloth-config
+cloth_config_version=10.0.96+fabric
+# Cardinal Components API
+# https://github.com/OnyxStudios/Cardinal-Components-API
 cca_version=5.0.2
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
-modmenu_version=5.0.2
-spruceui_version=4.1.0+1.19.3
-lambd_version=2.2.0+1.19.3
+modmenu_version=6.2.1
+spruceui_version=4.2.0+1.19.4
+lambd_version=2.3.0+1.19.4
 # https://www.curseforge.com/minecraft/mc-mods/alloy-forgery/files
 # https://maven.wispforest.io/wraith/alloy-forgery/
 alloyforgery_version=2.0.16+1.19
@@ -26,6 +32,12 @@ mmdecorations_version=0.5.0
 # Additional Entity Attributes
 # https://github.com/DaFuqs/AdditionalEntityAttributes
 aea_versionite=1.19-SNAPSHOT
-emi_version=0.6.1+1.19.3
-player_anim_version=1.0.2+1.19.3
-bclib_version=2.1.4
+emi_version=0.7.3+1.19.4
+player_anim_version=1.0.2+1.19.4
+bclib_version=2.2.4
+# Patchouli
+# https://github.com/VazkiiMods/Patchouli
+patchouli_version=1.19.3-78-FABRIC
+# Better Combat
+# https://github.com/ZsoltMolnarrr/BetterCombat
+better_combat_version=1.6.2+1.19.4-fabric
