Fixed gitignore from Steve's pr https://github.com/SigmundGranaas/forgero/pull/585/commits/cba8ef1246522b7a5dd619359b9f441f8137be4d

--- a/.gitignore
+++ b/.gitignore
@@ -109,9 +109,11 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-*/logs/
-*/run/
-*/build/
-*/dest/
+
 .gradle/
-*/output/
+
+[Ll]ogs/
+[Rr]un/
+[Bb]uild/
+[Dd]est/
+[Oo]utput/
