--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -1,3 +1,5 @@
+//file:noinspection GroovyAssignabilityCheck
+
 dependencies {
 	implementation project(':forgero-core')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
@@ -16,18 +18,6 @@ sourceSets {
 
 loom {
 	runs {
-		runClient {
-			client()
-			ideConfigGenerated(true)
-
-			dependencies {
-				runtimeOnly project(':content:forgero-vanilla')
-				runtimeOnly project(':content:forgero-extended')
-				runtimeOnly project(':content:forgero-compat')
-				runtimeOnly project(':content:forgero-structures')
-			}
-		}
-
 		testmodServer {
 			server()
 			ideConfigGenerated project.rootProject == project
