--- a/fabric/forgero-fabric-core/run/config/fabric/indigo-renderer.properties
+++ b/fabric/forgero-fabric-core/run/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Sat Mar 18 18:37:07 CET 2023
+#Sun Apr 30 16:31:30 CEST 2023
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
