--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 # Mod Properties
 modid=forgero
 minecraft_version=1.19.2
-forgero_version=0.10.9-pre3
+forgero_version=0.10.9-rc1
 release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
