--- a/fabric/forgero-fabric-compat/run/config/fabric/indigo-renderer.properties
+++ b/fabric/forgero-fabric-compat/run/config/fabric/indigo-renderer.properties
@@ -1,5 +1,5 @@
 #Indigo properties file
-#Sat Mar 18 19:02:15 CET 2023
+#Sat May 06 12:40:46 CEST 2023
 debug-compare-lighting=auto
 fix-exterior-vertex-lighting=auto
 ambient-occlusion-mode=hybrid
