--- a/fabric/forgero-fabric-compat/run/config/lambdynlights.toml
+++ b/fabric/forgero-fabric-compat/run/config/lambdynlights.toml
@@ -22,5 +22,22 @@ mode = "fancy"
 		[light_sources.settings.entities]
 
 			[light_sources.settings.entities.minecraft]
+				chicken = true
+				item = true
+				axolotl = true
+				cow = true
+				tropical_fish = true
+				chest_minecart = true
+				pig = true
+				skeleton = true
+				bat = true
+				zombie = true
+				glow_squid = true
 				glow_item_frame = false
+				squid = true
+				spider = true
+				creeper = true
+				sheep = true
+				player = true
+				enderman = true
 
