Added version to release name on modrinth

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -84,7 +84,7 @@ modrinth {
 	uploadFile = remapJar
 	gameVersions = [minecraft_version]
 	loaders = ["fabric", "quilt"]
-	versionName = "Forgero"
+	versionName = "Forgero $version"
 	changelog = file('../changelog.md').text
 	dependencies {
 		required.project "fabric-api"
