--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,9 +1,9 @@
 # compat
 cca_version=5.0.2
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
-modmenu_version=5.0.2
-spruceui_version=4.1.0+1.19.3
-lambd_version=2.2.0+1.19.3
+modmenu_version=3.2.5
+spruceui_version=3.3.3+1.18
+lambd_version=2.1.0+1.17
 # https://www.curseforge.com/minecraft/mc-mods/alloy-forgery/files
 # https://maven.wispforest.io/wraith/alloy-forgery/
 alloyforgery_version=2.0.16+1.19
@@ -27,5 +27,10 @@ mmdecorations_version=0.5.0
 # https://github.com/DaFuqs/AdditionalEntityAttributes
 aea_versionite=1.19-SNAPSHOT
 emi_version=0.6.1+1.19.3
-player_anim_version=1.0.2+1.19.3
+player_anim_version=1.0.2+1.18-fabric
 bclib_version=2.1.4
+better_combat_version=1.6.2+1.18.2-fabric
+cloth_config_version=gPqHXnrg
+patchouli_version=1.18.2-71-FABRIC
+lazydfu_version=0.1.2
+just_load_version=1.0.0+mc1.18.2
