--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 	include project(':content:forgero-compat')
 	include project(':content:forgero-structures')
 
-	include "net.devtech:arrp:0.6.7"
+	include "curse.maven:arrp-463113:3680866"
 }
 
 subprojects {
