Update dependencies to 1.19.4 and fix `.gitignore` (#585)
* fix: Update dependencies to 1.19.4

* Disabled Patchouli compat since it hasn't been updated yet, this allows the game to load a world without crashing.

* Also removed unnecessary temporary files that should be excluded by the `.gitignore` file.

* chore: Fix nested folders not being excluded by Git

* fix: Remove some unused mixins, disable some Gradle inspections

* fix: Fix Mod Menu parent IDs

* Using local gradle wrapper for gametesting (#589)

* Using proper maven repo instead of cursemaven

* Adding necessary modmenu data for wrapper mod to be a fake parent mod

* Adding better descriptions for all modules.

* Added an action to build the mod

* Deleted unused modmenu mixin

* revert: Move Patchouli books back to original directory

Couldn't figure out the jar-in-jar stuff for Patchouli, will have to be a separate experiment at some point.

---------

Co-authored-by: Sigmund Granaas Sandring <46557903+SigmundGranaas@users.noreply.github.com>
Co-authored-by: sigmundgranaas <sigmundsgranaas@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -109,19 +109,9 @@ gradle-app.setting
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-*/logs/
-*/run/
-*/build/
-*/dest/
+[Ll]ogs/
+[Rr]un/
+[Bb]uild/
+[Dd]est/
 .gradle/
-*/output/
-
-/fabric/forgero-fabric-compat/run/*
-/fabric/forgero-fabric-compat/build/*
-/fabric/forgero-fabric-compat/logs/*
-/fabric/forgero-fabric-core/build/*
-/fabric/forgero-fabric-core/run/*
-/fabric/forgero-fabric-core/logs/*
-/fabric/minecraft-common/build/*
-/fabric/minecraft-common/run/*
-/fabric/minecraft-common/logs/*
+[Oo]utput/
