--- a/.github/workflows/build_mod.yml
+++ b/.github/workflows/build_mod.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Game Test
+name: Build mod
 
 on:
   push:
@@ -26,8 +26,8 @@ jobs:
           cache: gradle
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Runs gametest
-        run: ./gradlew fabric:forgero-fabric-core:runGameTest
+      - name: Builds the mod
+        run: ./gradlew fabric:build
       - name: Cleanup Gradle Cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
