--- a/.github/workflows/gametest_fabric.yml
+++ b/.github/workflows/gametest_fabric.yml
@@ -5,7 +5,7 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Game Test
+name: Gametest (Fabric)
 
 on:
   push:
@@ -28,24 +28,28 @@ jobs:
           paths_ignore: '["**/README.md", "**/docs/**", "**/.gitignore", "**/LICENSE"]'
           concurrent_skipping: same_content_newer
 
-  gametest_compat:
+  gametest:
     runs-on: ubuntu-latest
     needs: skip_duplicate_jobs
     if: needs.skip_duplicate_jobs.outputs.should_skip != 'true'
 
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
           cache: gradle
+
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Runs gametest
-        run: ./gradlew fabric:forgero-fabric-compat:runGameTest
-      - name: Cleanup Gradle Cache
+
+      - name: Run gametest
+        run: ./gradlew fabric:forgero-fabric-core:runGameTest
+
+      - name: Cleanup Gradle cache
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
         run: |
