--- a/.github/workflows/build_fabric.yml
+++ b/.github/workflows/build_fabric.yml
@@ -28,7 +28,7 @@ jobs:
           paths_ignore: '["**/README.md", "**/docs/**", "**/.gitignore", "**/LICENSE"]'
           concurrent_skipping: same_content_newer
 
-  build_test_fabric:
+  build_fabric:
     strategy:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
