Updated loom, gradle and loader

--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -24,6 +24,13 @@ repositories {
 	mavenLocal()
 }
 
+configurations {
+	modRuntimeOnly.exclude group: 'net.fabricmc', module: 'fabric-loader'
+	modCompileOnlyApi.exclude group: 'net.fabricmc', module: 'fabric-loader'
+	modCompileOnly.exclude group: 'net.fabricmc', module: 'fabric-loader'
+
+}
+
 dependencies {
 	runtimeOnly project(':content:forgero-vanilla')
 	runtimeOnly project(':content:forgero-extended')
@@ -34,14 +41,14 @@ dependencies {
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modCompileOnlyApi "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+	modApi "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
 
 	modImplementation "curse.maven:arrp-463113:3901211"
 
 	//dynamiclights compat
-	modImplementation "curse.maven:modmenu-308702:4145207"
+	modCompileOnlyApi "curse.maven:modmenu-308702:4145207"
 	modCompileOnlyApi "curse.maven:lambdynamiclights-393442:3824820"
-	modImplementation("dev.lambdaurora:spruceui:4.1.0+1.19.2")
+	modCompileOnlyApi("dev.lambdaurora:spruceui:4.1.0+1.19.2")
 
 	//better combat
 	modCompileOnly "maven.modrinth:better-combat:1.5.5+1.19-fabric"
@@ -60,7 +67,7 @@ dependencies {
 	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
 	//JEI
-	modImplementation "maven.modrinth:u6dRKJwZ:Fq2JkIID"
+	modRuntimeOnly "maven.modrinth:u6dRKJwZ:Fq2JkIID"
 
 	//toolstats testing
 	//modImplementation "curse.maven:tool-stats-377109:3944167"
@@ -124,8 +131,8 @@ dependencies {
 
 	//modImplementation 'com.ptsmods:devlogin:2.1'
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
+	modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modApi("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
 
 	// Mod Menu API
 	modCompileOnlyApi "com.terraformersmc:modmenu:${this.modmenu_version}"
