--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -61,7 +61,7 @@ dependencies {
 	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
 	//JEI
-	modImplementation "maven.modrinth:jei:J5TcglXt"
+	modImplementation "maven.modrinth:jei:13.1.0.9"
 
 	//toolstats testing
 	//modImplementation "curse.maven:tool-stats-377109:3944167"
