--- a/.github/workflows/gametest_fabric.yml
+++ b/.github/workflows/gametest_fabric.yml
@@ -36,11 +36,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Git
+        run: |
+          git --version
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git status
+          git tag
+          git describe
+
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: gradle
 
       - name: Validate Gradle wrapper
