--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+//file:noinspection GroovyAssignabilityCheck
+
 plugins {
 	id "maven-publish"
 }
@@ -14,6 +16,8 @@ def getGitVersion = { ->
 
 	return gitVersionStringParsed
 }
+
+println("Forgero version: ${getGitVersion()}")
 
 version = "${getGitVersion()}"
 group = project.maven_group
