--- a/.github/workflows/gametest_fabric_compat.yml
+++ b/.github/workflows/gametest_fabric_compat.yml
@@ -35,6 +35,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Set up Git
         run: |
