--- a/.github/workflows/build_fabric.yml
+++ b/.github/workflows/build_fabric.yml
@@ -48,7 +48,7 @@ jobs:
           git config user.email "<>"
           git status
           git tag
-          git describe
+          git describe --tags
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
