--- a/.github/workflows/gametest_fabric.yml
+++ b/.github/workflows/gametest_fabric.yml
@@ -45,7 +45,7 @@ jobs:
           git config user.email "<>"
           git status
           git tag
-          git describe
+          git describe --tags
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
