--- a/.github/workflows/gametest_fabric.yml
+++ b/.github/workflows/gametest_fabric.yml
@@ -54,7 +54,7 @@ jobs:
           cache: gradle
 
       - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+        uses: gradle/wrapper-validation-action@v1
 
       - name: Run gametest
         run: ./gradlew fabric:forgero-fabric-core:runGameTest
