--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -54,6 +54,7 @@ jobs:
         with:
           name: compiled_jar_files
           path: fabric/build/libs/
+          if-no-files-found: error
 
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
       # the publishing section of your build.gradle
@@ -69,3 +70,10 @@ jobs:
         run: ./gradlew curseforge
         env:
           CurseForgeApiKey: ${{ secrets.CURSEFORGEAPIKEY }}
+
+      - name: Cleanup Gradle cache
+        # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
+        # Restoring these files from a GitHub Actions cache might cause problems for future builds.
+        run: |
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
