--- a/.github/workflows/gametest_fabric.yml
+++ b/.github/workflows/gametest_fabric.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Run gametest
+      - name: Run gametest (Fabric)
         run: ./gradlew fabric:forgero-fabric-core:runGameTest
 
       - name: Cleanup Gradle cache
