--- a/.github/workflows/build_fabric.yml
+++ b/.github/workflows/build_fabric.yml
@@ -63,7 +63,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: wrapper
-          arguments: fabric:forgero-fabric-core:build --stacktrace
+          arguments: fabric:build --stacktrace
 
       - name: Upload Gradle artifacts
         uses: actions/upload-artifact@v3
