--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -32,6 +32,7 @@ jobs:
           git config user.email "<>"
           git status
           git describe --tags
+        shell: bash
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
@@ -75,5 +76,6 @@ jobs:
         # Remove some files from the Gradle cache, so they aren't cached by GitHub Actions.
         # Restoring these files from a GitHub Actions cache might cause problems for future builds.
         run: |
-          rm -force ~/.gradle/caches/modules-2/modules-2.lock
-          rm -force ~/.gradle/caches/modules-2/gc.properties
+          rm -f ~/.gradle/caches/modules-2/modules-2.lock
+          rm -f ~/.gradle/caches/modules-2/gc.properties
+        shell: bash
