Testing the publish action

--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id "maven-publish"
 }
 
+def ENV = System.getenv()
+
 def getGitVersion = { ->
 	def stdout = new ByteArrayOutputStream()
 	exec {
@@ -17,13 +19,17 @@ def getGitVersion = { ->
 	return gitVersionStringParsed
 }
 
+def getVersion = {
+	return ENV.GITHUB_RUN_NUMBER ? "${getGitVersion()}" : "${project.forgero_version}+${project.minecraft_version}"
+}
+
 println("Forgero version: ${getGitVersion()}")
 
-version = "${getGitVersion()}"
+version = "${getVersion()}"
 group = project.maven_group
 
 subprojects {
-	version = "${getGitVersion()}"
+	version = "${getVersion()}"
 	group = project.maven_group
 
 	repositories {
@@ -53,12 +59,11 @@ subprojects {
 				}
 			}
 
-
 			publishing {
 				publications {
 					gpr(MavenPublication) {
 						groupId = group // Replace with your groupId
-						artifactId = archivesBaseName // Replace with your module's name
+						artifactId = archives_base_name // Replace with your module's name
 						from components.java
 					}
 				}
