--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -5,20 +5,36 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: "Publish build versions"
 
 on:
-  release:
-    types: [ created ]
-  workflow_dispatch:
-
+  push:
+    branches: [ 1.* ]
+  pull_request:
+    branches: [ 1.* ]
 
 jobs:
-  build:
+  skip_duplicate_jobs:
+    name: Skip duplicate jobs
+    continue-on-error: true
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@v5
+        with:
+          paths_ignore: '["**/README.md", "**/docs/**", "**/.gitignore", "**/LICENSE"]'
+          concurrent_skipping: same_content_newer
+
+  build_fabric:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
+    needs: skip_duplicate_jobs
+    if: needs.skip_duplicate_jobs.outputs.should_skip != 'true'
 
     steps:
       - uses: actions/checkout@v3
@@ -35,39 +51,16 @@ jobs:
         shell: bash
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'temurin'
-          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-          settings-path: ${{ github.workspace }} # location for the settings.xml file
+          cache: gradle
 
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
 
-      - name: Execute Gradle build
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: build
-
       - name: Upload Gradle artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: compiled_jar_files
-          path: fabric/build/libs/
-          if-no-files-found: error
-
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-        with:
-          arguments: publish
         env:
-          GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Publish to CurseForge
-        run: ./gradlew curseforge
-        env:
-          CurseForgeApiKey: ${{ secrets.CURSEFORGEAPIKEY }}
+          GPR_API_KEY: ${{ secrets.GPR_API_KEY }}
+        run: ./gradlew publish
