Only publish from one os

--- a/.github/workflows/publish_beta_fabric.yml
+++ b/.github/workflows/publish_beta_fabric.yml
@@ -28,11 +28,8 @@ jobs:
           paths_ignore: '["**/README.md", "**/docs/**", "**/.gitignore", "**/LICENSE"]'
           concurrent_skipping: same_content_newer
 
-  build_fabric:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-    runs-on: ${{ matrix.os }}
+  publish:
+    runs-on: ubuntu-latest
     needs: skip_duplicate_jobs
     if: needs.skip_duplicate_jobs.outputs.should_skip != 'true'
 
