--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,8 +1,9 @@
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.1
+minecraft_version=1.20-pre4
+yarn_mappings=1.20-pre4+build.2
 loader_version=0.14.19
+
 #Fabric api
-fabric_version=0.76.0+1.19.4
+fabric_version=0.81.2+1.20
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2560M
 org.gradle.parallel=true
