--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod Properties
 modid=forgero
-minecraft_version=1.19.4
+minecraft_version=1.20-pre4
 forgero_version=0.10.9-rc1
 release_type=beta
 maven_group=com.sigmundgranaas
