updated modmenu version

--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,7 +1,7 @@
 # compat
 cca_version=5.0.2
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
-modmenu_version=4.1.2
+modmenu_version=4.2.0-beta.2
 # https://www.curseforge.com/minecraft/mc-mods/alloy-forgery/files
 # https://maven.wispforest.io/wraith/alloy-forgery/
 alloyforgery_version=2.0.16+1.19
