Added a new vein mining package and a pattern mining package

--- a/content/forgero-extended/src/main/resources/data/forgero/packs/vein_mining_schematics/package.json
+++ b/content/forgero-extended/src/main/resources/data/forgero/packs/vein_mining_schematics/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "shovel-additions",
+  "name": "vein_mining_parts",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
-    "forgero-vanilla",
-    "minecraft-vanilla"
+    "forgero-vanilla"
   ]
 }
