--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -24,12 +24,7 @@ repositories {
 	mavenLocal()
 }
 
-configurations {
-	modRuntimeOnly.exclude group: 'net.fabricmc', module: 'fabric-loader'
-	modCompileOnlyApi.exclude group: 'net.fabricmc', module: 'fabric-loader'
-	modCompileOnly.exclude group: 'net.fabricmc', module: 'fabric-loader'
 
-}
 
 dependencies {
 	runtimeOnly project(':content:forgero-vanilla')
@@ -41,19 +36,18 @@ dependencies {
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modApi "vazkii.patchouli:Patchouli:1.19.3-78-FABRIC"
+	modImplementation("vazkii.patchouli:Patchouli:${project.patchouli_version}")
 
-	modImplementation("net.devtech:arrp:0.6.7")
+	modImplementation("net.devtech:arrp:${project.aarp_version}")
 
 	//dynamiclights compat
-	modCompileOnlyApi "maven.modrinth:modmenu:${project.modmenu_version}"
-	modCompileOnlyApi "maven.modrinth:lambdynamiclights:${project.lambd_version}"
-	modCompileOnlyApi("dev.lambdaurora:spruceui:${project.spruceui_version}")
+	modCompileOnly("maven.modrinth:lambdynamiclights:${project.lambd_version}")
+	modCompileOnly("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
 	//better combat
-	modCompileOnly "maven.modrinth:better-combat:1.6.1+1.19.3-fabric"
-	modCompileOnly "maven.modrinth:cloth-config:9.0.94+fabric"
-	modCompileOnly("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
+	modCompileOnly("maven.modrinth:better-combat:${project.better_combat_version}")
+	//modImplementation "maven.modrinth:cloth-config:9.0.94+fabric"
+	//modImplementation("dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim_version}")
 
 	//betterend&betternether
 	// modImplementation "maven.modrinth:BgNRHReB:mKksn4EY"
@@ -67,7 +61,7 @@ dependencies {
 	//modImplementation "maven.modrinth:emi-loot:0.5.0+1.19"
 
 	//JEI
-	modRuntimeOnly "maven.modrinth:jei:J5TcglXt"
+	//modRuntimeOnly "maven.modrinth:jei:J5TcglXt"
 
 	//toolstats testing
 	//modImplementation "curse.maven:tool-stats-377109:3944167"
@@ -125,13 +119,17 @@ dependencies {
 	//modImplementation "curse.maven:combatedit-385513:3869344"
 
 	//modImplementation 'com.ptsmods:devlogin:2.1'
+
+	modCompileOnlyApi ("net.fabricmc:fabric-loader:${project.loader_version}")
+
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modApi "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modApi("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
+	modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}")
+
+	modImplementation("net.fabricmc:fabric-language-kotlin:1.9.0+kotlin.1.8.0")
 
 	// Mod Menu API
-	modCompileOnlyApi "com.terraformersmc:modmenu:${this.modmenu_version}"
-	modRuntimeOnly "com.terraformersmc:modmenu:${this.modmenu_version}"
+	modImplementation("com.terraformersmc:modmenu:${this.modmenu_version}")
+
 }
 
 sourceSets {
@@ -175,7 +173,7 @@ loom {
 			dependencies {
 				modRuntimeOnly "maven.modrinth:lazydfu:4SHylIO9"
 				modRuntimeOnly "maven.modrinth:here-be-no-dragons:Fi3C0IO5"
-				modRuntimeOnly "maven.modrinth:just-load:ob5o9Cf5"
+				modRuntimeOnly "maven.modrinth:just-load:${project.justload_version}"
 			}
 
 			client()
