--- a/fabric/forgero-fabric-compat/gradle.properties
+++ b/fabric/forgero-fabric-compat/gradle.properties
@@ -1,7 +1,7 @@
 # compat
 cca_version=5.0.2
 # https://maven.terraformersmc.com/releases/com/terraformersmc/modmenu/
-modmenu_version=5.0.2
+modmenu_version=5.1.0-beta.4
 spruceui_version=4.1.0+1.19.3
 lambd_version=2.2.0+1.19.3
 # https://www.curseforge.com/minecraft/mc-mods/alloy-forgery/files
@@ -29,3 +29,6 @@ aea_versionite=1.19-SNAPSHOT
 emi_version=0.6.1+1.19.3
 player_anim_version=1.0.2+1.19.3
 bclib_version=2.1.4
+patchouli_version=1.19.3-78-FABRIC
+better_combat_version=1.6.1+1.19.3-fabric
+justload_version=1.0.3
