--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,11 @@ org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
 # Mod Properties
 modid=forgero
+# Minecraft version
 minecraft_version=1.19.2
-forgero_version=0.10.9-rc3
-release_type=beta
+# Forgero version
+forgero_version=0.10.9
+release_type=release
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 
