Revert "Only publish from one os"
This reverts commit 6a1b2832bcb031beff04b9224a1db6cd5aeb7d5d.

--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -28,8 +28,11 @@ jobs:
           paths_ignore: '["**/README.md", "**/docs/**", "**/.gitignore", "**/LICENSE"]'
           concurrent_skipping: same_content_newer
 
-  publish:
-    runs-on: ubuntu-latest
+  build_fabric:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest, macos-latest, windows-latest ]
+    runs-on: ${{ matrix.os }}
     needs: skip_duplicate_jobs
     if: needs.skip_duplicate_jobs.outputs.should_skip != 'true'
 
