--- a/fabric/forgero-fabric-compat/build.gradle
+++ b/fabric/forgero-fabric-compat/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	implementation project(path: ':fabric:forgero-fabric-core', configuration: 'namedElements')
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
-	modApi "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
+	modCompileOnly "vazkii.patchouli:Patchouli:1.19-74-FABRIC"
 
 	modImplementation "curse.maven:arrp-463113:3901211"
 
