--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,9 +1,9 @@
-minecraft_version=1.20-pre5
-yarn_mappings=1.20-pre6+build.2
-loader_version=0.14.20
+minecraft_version=1.20
+yarn_mappings=1.20+build.1
+loader_version=0.14.21
 
 #Fabric api
-fabric_version=0.81.2+1.20
+fabric_version=0.83.0+1.20
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2560M
 org.gradle.parallel=true
