--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel=true
 # Mod Properties
 modid=forgero
 # Minecraft version
-minecraft_version=1.20-pre4
+minecraft_version=1.20
 # Forgero version
-forgero_version=0.10.9
+forgero_version=0.10.9.2
 release_type=release
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
