--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ modid=forgero
 # Minecraft version
 minecraft_version=1.19.2
 # Forgero version
-forgero_version=0.10.10
-release_type=release
+forgero_version=0.10.10-rc1
+release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 
