--- a/content/forgero-extended/src/main/resources/data/forgero/packs/bow-additions/package.json
+++ b/content/forgero-extended/src/main/resources/data/forgero/packs/bow-additions/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "applied-energistics-2-materials",
+  "name": "bow-additions",
   "resource_type": "PACKAGE",
   "priority": 4,
-  "namespace": "ae2",
+  "namespace": "forgero",
   "dependencies": [
     "minecraft",
     "forgero",
-    "minecraft-vanilla",
-    "ae2"
+    "forgero-vanilla",
+    "minecraft-vanilla"
   ]
 }
