--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -3,6 +3,8 @@ dependencies {
 	implementation project(path: ':fabric:minecraft-common', configuration: 'namedElements')
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
 
 	modImplementation "curse.maven:arrp-463113:3901211"
 	include "curse.maven:arrp-463113:3901211"
