--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -12,7 +12,6 @@ on:
     types: [ created ]
   workflow_dispatch:
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -41,21 +40,7 @@ jobs:
           property: minecraft_version
           default: 0.0.1
 
-      - run: echo version string ${{ steps.mod_version.outputs.value }}+mc${{ steps.supported_minecraft_version.outputs.value }}
-
-      - name: Set up Git
-        run: |
-          git --version
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-          git status
-          git describe --tags
-        shell: bash
-
-      - name: Create Git release tag
-        run: |
-          git tag ${{ steps.mod_version.outputs.value }}+mc${{ steps.supported_minecraft_version.outputs.value }}
-          git push origin ${{ steps.mod_version.outputs.value }}+mc${{ steps.supported_minecraft_version.outputs.value }}
+      - run: echo version string ${{ steps.mod_version.outputs.value }}+${{ steps.supported_minecraft_version.outputs.value }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v2
@@ -73,13 +58,6 @@ jobs:
         with:
           arguments: build
 
-      - name: Upload Gradle artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: compiled_jar_files
-          path: fabric/build/libs/
-          if-no-files-found: error
-
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
       # the publishing section of your build.gradle
       - name: Publish to GitHub Packages
@@ -90,7 +68,8 @@ jobs:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish to CurseForge
-        run: ./gradlew curseforge
+      - name: Publish to Modrinth and CurseForge
+        run: ./gradlew publishToModrinthAndCurseForge
         env:
-          CurseForgeApiKey: ${{ secrets.CURSEFORGEAPIKEY }}
+          MODRINTH_TOKEN : ${{ secrets.MODRINTH_TOKEN  }}
+          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY  }}
