--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -12,7 +12,6 @@ on:
     types: [ created ]
   workflow_dispatch:
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,17 +20,41 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Get mod version from Gradle
+        uses: madhead/read-java-properties@latest
+        id: forgero_version
+        with:
+          file: gradle.properties
+          property: mod_version
+          default: 0.0.1
+
+      - name: Get supported Minecraft version from Gradle
+        uses: madhead/read-java-properties@latest
+        id: supported_minecraft_version
+        with:
+          file: gradle.properties
+          property: minecraft_version
+          default: 0.0.1
+
+      - run: echo version string ${{ steps.mod_version.outputs.value }}+${{ steps.supported_minecraft_version.outputs.value }}
+
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'adopt'
+          distribution: 'temurin'
           server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-      - name: Build with Gradle
-        uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Execute Gradle build
+        uses: gradle/gradle-build-action@v2
         with:
           arguments: build
 
@@ -44,8 +67,9 @@ jobs:
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Publish to CurseForge
-        run: ./gradlew curseforge
+
+      - name: Publish to Modrinth and CurseForge
+        run: ./gradlew publishToModrinthAndCurseForge
         env:
-          CurseForgeApiKey: ${{ secrets.CURSEFORGEAPIKEY }}
-      
+          MODRINTH_TOKEN : ${{ secrets.MODRINTH_TOKEN  }}
+          CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY  }}
