--- a/.github/workflows/gradle_publish.yml
+++ b/.github/workflows/gradle_publish.yml
@@ -67,9 +67,10 @@ jobs:
         env:
           GITHUB_ACTOR: ${{ github.actor }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GPR_API_KEY: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to Modrinth and CurseForge
         run: ./gradlew publishToModrinthAndCurseForge
         env:
-          MODRINTH_TOKEN : ${{ secrets.MODRINTH_TOKEN  }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN  }}
           CURSEFORGE_API_KEY: ${{ secrets.CURSEFORGE_API_KEY  }}
