* Added bronze, silver and steel to common materials * Added mythic metals common tags dynamically

--- a/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
+++ b/content/forgero-compat/src/main/resources/data/forgero/packs/common/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "common",
+  "name": "compat_common",
   "resource_type": "PACKAGE",
   "priority": 4,
   "namespace": "forgero",
-  "dependencies": [
-    "minecraft",
-    "forgero"
-  ]
+  "dependencies": {
+    "all": [
+      "minecraft",
+      "forgero"
+    ],
+    "any": [
+      "mythicmetals"
+    ]
+  }
 }
