--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,9 +1,9 @@
-minecraft_version=1.20.1
-yarn_mappings=1.20.1+build.9
-loader_version=0.14.21
+minecraft_version=1.20.2-rc1
+yarn_mappings=1.20.2-rc1+build.3
+loader_version=0.14.22
 
 #Fabric api
-fabric_version=0.85.0+1.20.1
+fabric_version=0.88.5+1.20.2
 
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2560M
