--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 # Mod Properties
 modid=forgero
 # Minecraft version
-minecraft_version=1.20.1
+minecraft_version=23w31a
 # Forgero version
 forgero_version=0.10.9.4
 release_type=release
