--- a/fabric/forgero-fabric-core/build.gradle
+++ b/fabric/forgero-fabric-core/build.gradle
@@ -17,6 +17,8 @@ sourceSets {
 }
 
 loom {
+	accessWidenerPath = file("src/main/resources/forgero-fabric-core.accesswidener")
+
 	runs {
 		runClient {
 			client()
