--- a/fabric/gradle.properties
+++ b/fabric/gradle.properties
@@ -1,9 +1,9 @@
-minecraft_version=1.20.2-rc1
-yarn_mappings=1.20.2-rc1+build.3
+minecraft_version=1.20.2
+yarn_mappings=1.20.2+build.1
 loader_version=0.14.22
 
 #Fabric api
-fabric_version=0.88.5+1.20.2
+fabric_version=0.89.1+1.20.2
 
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx2560M
