--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.parallel=true
 # Mod Properties
 modid=forgero
 # Minecraft version
-minecraft_version=23w31a
+minecraft_version=1.20.2
 # Forgero version
 forgero_version=0.11.3
-release_type=release
+release_type=beta
 maven_group=com.sigmundgranaas
 archives_base_name=forgero
 
